--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -203,11 +203,6 @@ body {
   margin: 0;
   background: url("../img/bg.png");
 }
-@media all and (min-width: 46.8em) {
-  body {
-    padding-top: 2rem;
-  }
-}
 
 .wrap {
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
@@ -6471,11 +6466,6 @@ li.dropdown:hover .dropdown-menu {
   width: 100%;
   overflow: hidden;
 }
-@media all and (min-width: 46.8em) {
-  .off-canvas-wrap {
-    padding-top: 1rem;
-  }
-}
 
 .inner-wrap {
   -webkit-backface-visibility: hidden;
@@ -6710,150 +6700,51 @@ a.menu-icon span {
 }
 
 .slider {
-  width: 100%;
-  height: auto;
+  margin: 0 auto 40px;
+  max-width: 100% !important;
+  max-height: 700px;
+  overflow: hidden;
 }
-.slider .flex-control-nav {
-  display: none;
+.slider .slide img {
+  height: auto !important;
 }
-.slider h2.slide-title {
-  top: 70%;
-}
-.slider h2.slide-title a {
-  border-left: 3px solid #a50715;
-  font-size: 1.4375rem;
-  background: rgba(0, 0, 0, 0.5);
-  font-family: "Cuprum", sans-serif;
-  font-weight: normal;
-  color: white;
-  padding: .5em 1em;
-}
-@media all and (max-width: 46.8em) {
-  .slider h2.slide-title a {
-    position: initial;
-    background: none;
-    border: none;
-    display: block;
-    height: 3.5em;
-  }
-}
-@media all and (max-width: 46.8em) {
-  .slider h2.slide-title {
-    background: black;
-  }
-}
-
-.fraction-slider {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  overflow: visible;
-}
-.fraction-slider .slide {
-  display: none;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  z-index: 500;
-}
-.fraction-slider .active-slide {
-  z-index: 600;
-}
-.fraction-slider .fs_obj {
-  display: block;
-  display: none;
-  position: absolute;
-  top: 0;
-  left: 100%;
-  z-index: 7000;
-}
-.fraction-slider .fs_fixed_obj {
-  z-index: 6000;
-  left: 0;
-}
-.fraction-slider .fs_fixed_obj * {
-  display: inline-block;
-  position: relative;
-  top: 0px;
-  left: 0px;
-}
-
-.fs_loader {
-  width: 100%;
-  height: 400px;
-  background: url(images/fs.spinner.gif) center center no-repeat transparent;
-}
-
-/** CONTROLS **/
-.fraction-slider .prev,
-.fraction-slider .next {
-  display: none;
-  position: absolute;
-  width: 45px;
-  height: 45px;
-  z-index: 9999;
-}
-
-.fraction-slider .prev {
-  left: 10px;
-  top: 45%;
-  background: url(images/fs.prevnext.png) 0px 0px no-repeat transparent;
-}
-
-.fraction-slider .prev:hover {
-  background: url(images/fs.prevnext.png) 0px -45px no-repeat transparent;
-}
-
-.fraction-slider .next {
-  right: 10px;
-  top: 185px;
-  background: url(images/fs.prevnext.png) -45px 0px no-repeat transparent;
-}
-
-.fraction-slider .next:hover {
-  background: url(images/fs.prevnext.png) -45px -45px no-repeat transparent;
-}
-
-.fraction-slider:hover .prev,
-.fraction-slider:hover .next {
-  display: block;
-}
-
-/** PAGER **/
-.fs-pager-wrapper {
-  position: absolute;
-  left: 10px;
-  bottom: 10px;
-  z-index: 9999;
-}
-
-.fs-pager-wrapper a {
-  display: inline-block;
-  width: 14px;
-  height: 14px;
-  margin: 0 5px 0 0;
-  background: url(images/fs.pager.png) 0px -14px no-repeat transparent;
-}
-
-.fs-pager-wrapper .active {
-  background: url(images/fs.pager.png) 0px 0px no-repeat transparent;
-}
-
-.fraction-slider div:nth-of-type(2n) img {
+.slider .fraction-slider div:nth-child(2n) img {
   -webkit-transform: scale(1.06);
+  -moz-transform: scale(1.06);
+  -ms-transform: scale(1.06);
+  -o-transform: scale(1.06);
+  transform: scale(1.06);
 }
-.fraction-slider div:nth-of-type(2n+1) img {
+.slider .fraction-slider .scale-slide:nth-child(2n) img {
   -webkit-transform: scale(1);
+  -moz-transform: scale(1);
+  -ms-transform: scale(1);
+  -o-transform: scale(1);
+  transform: scale(1);
+  -webkit-transition: all 8s ease;
+  -moz-transition: all 8s ease;
+  -ms-transition: all 8s ease;
+  -o-transition: all 8s ease;
+  transition: all 8s ease;
 }
-
-.fraction-slider .scale-slide:nth-child(2n) img {
+.slider .fraction-slider div:nth-child(2n+1) img {
   -webkit-transform: scale(1);
-  transition: all 5s ease-in;
+  -moz-transform: scale(1);
+  -ms-transform: scale(1);
+  -o-transform: scale(1);
+  transform: scale(1);
 }
-
-.fraction-slider .scale-slide:nth-child(2n+1) img {
+.slider .fraction-slider .scale-slide:nth-child(2n+1) img {
   -webkit-transform: scale(1.06);
-  transition: all 5s ease-in;
+  -moz-transform: scale(1.06);
+  -ms-transform: scale(1.06);
+  -o-transform: scale(1.06);
+  transform: scale(1.06);
+  -webkit-transition: all 8s ease;
+  -moz-transition: all 8s ease;
+  -ms-transition: all 8s ease;
+  -o-transition: all 8s ease;
+  transition: all 8s ease;
 }
 
 .service-tile {
